Setup web.config

--- a/src/EventServer.UI/Web.config
+++ b/src/EventServer.UI/Web.config
@@ -16,7 +16,7 @@
     </configSections>
 
     <appSettings>
-        <add key="developerEmail" value="YOUR.EMAIL@DOMAIN.COM" />
+        <add key="developerEmail" value="tim@timrayburn.net" />
         <add key="changeset" value="XXXX" />
     </appSettings>
 
@@ -160,8 +160,8 @@
 
     <system.net>
         <mailSettings>
-            <smtp from="no-reply@tysondevcon.com">
-                <network host="exchgw.tyson.com" port="25" userName="" password="" />
+            <smtp from="blog@timrayburn.net">
+                <network host="mail.timrayburn.net" port="25" userName="" password="" />
             </smtp>
         </mailSettings>
     </system.net>
