Working on DTF theme

--- a/src/EventServer.UI/EventServer.UI.csproj
+++ b/src/EventServer.UI/EventServer.UI.csproj
@@ -375,6 +375,18 @@
     <Content Include="Scripts\tiny_mce\utils\form_utils.js" />
     <Content Include="Scripts\tiny_mce\utils\mctabs.js" />
     <Content Include="Scripts\tiny_mce\utils\validate.js" />
+    <Content Include="Themes\DTF1\images\bullet.gif" />
+    <Content Include="Themes\DTF1\images\but1.gif" />
+    <Content Include="Themes\DTF1\images\but2.gif" />
+    <Content Include="Themes\DTF1\images\but3.gif" />
+    <Content Include="Themes\DTF1\images\but4.gif" />
+    <Content Include="Themes\DTF1\images\but5.gif" />
+    <Content Include="Themes\DTF1\images\but6.gif" />
+    <Content Include="Themes\DTF1\images\but7.gif" />
+    <Content Include="Themes\DTF1\images\footer_bg.gif" />
+    <Content Include="Themes\DTF1\images\header.jpg" />
+    <Content Include="Themes\DTF1\images\photo.jpg" />
+    <Content Include="Themes\DTF1\theme.css" />
     <Content Include="Themes\Default\default.css" />
     <Content Include="Themes\Default\images\bg01.jpg" />
     <Content Include="Themes\Default\images\bg02.jpg" />
@@ -396,6 +408,17 @@
     <Content Include="Themes\Default\images\tdc_header.jpg" />
     <Content Include="Themes\Default\images\wlw_icon.png" />
     <Content Include="Themes\Default\images\wlw_watermark.png" />
+    <Content Include="Themes\DTF2\images\img01.jpg" />
+    <Content Include="Themes\DTF2\images\img02.jpg" />
+    <Content Include="Themes\DTF2\images\img03.jpg" />
+    <Content Include="Themes\DTF2\images\img04.jpg" />
+    <Content Include="Themes\DTF2\images\img05.jpg" />
+    <Content Include="Themes\DTF2\images\img06.jpg" />
+    <Content Include="Themes\DTF2\images\img07.jpg" />
+    <Content Include="Themes\DTF2\theme.css" />
+    <Content Include="Themes\DTF3\images\Header-skinny.jpg" />
+    <Content Include="Themes\DTF3\images\Header.jpg" />
+    <Content Include="Themes\DTF3\theme.css" />
     <Content Include="Themes\Solution\images\img01.gif" />
     <Content Include="Themes\Solution\images\img02.gif" />
     <Content Include="Themes\Solution\images\img03.gif" />
