added speaker controller

--- a/src/EventServer.Mvc3/EventServer.Mvc3.csproj
+++ b/src/EventServer.Mvc3/EventServer.Mvc3.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\SettingsController.cs" />
+    <Compile Include="Controllers\SpeakersController.cs" />
     <Compile Include="Core\Domain\AppSettings.cs" />
     <Compile Include="Core\Domain\Category.cs" />
     <Compile Include="Core\Domain\Comment.cs" />
@@ -147,13 +148,16 @@
     <Compile Include="Infrastructure\Services\TweetSharpTwitterService.cs" />
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\AdminModels.cs" />
+    <Compile Include="Models\CustomValidatorAttribute.cs" />
     <Compile Include="Models\ExtensionMethods.cs" />
     <Compile Include="Models\HomeModels.cs" />
     <Compile Include="Models\HtmlHelperExtensions.cs" />
     <Compile Include="Models\Log.cs" />
     <Compile Include="Models\ModelBinders.cs" />
     <Compile Include="Models\SettingsViewModels.cs" />
+    <Compile Include="Models\SpeakersModels.cs" />
     <Compile Include="Models\SystemPath.cs" />
+    <Compile Include="Models\ValidateUrlAttribute.cs" />
     <Compile Include="Models\ValidationUtil.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -303,6 +307,15 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Shared\Tweets.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Speakers\Index.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\UserProfile.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Admin\Sessions.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
